[package]
name = "rscat"
version = "0.1.1"
authors = ["Cody Logan <clpo13@gmail.com>"]
description = "GNU cat(1) clone implemented in Rust"
repository = "https://github.com/clpo13/rscat"
readme = "README.md"
keywords = ["cat", "concatenate"]
categories = ["command-line-utilities", "filesystem"]
license = "GPL-3.0-or-later"

[badges]
travis-ci = { repository = "clpo13/rscat", branch = "master" }

[dependencies]
